--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,6 +16,9 @@
 
 body {
   color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  background: rgb(201,176,194);
+  background: radial-gradient(circle, rgba(201,176,194,1) 0%, rgba(202,243,249,1) 100%);
+  min-height: 100vh;
+  margin: 0;
+  font-family: "Poppins", sans-serif;
 }
